# dirtree

./: LICENSE  README.md  pyproject.toml
dirtree/: __init__.py  console.py
src/dirtree/: __init__.py
