[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ascii-dirtree"
version = "1.0.0"
authors = [
  { name="Justin Sostmann", email="" },
]
description = "Small CLI app to print out a pretty ascii tree of a directory."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/juso40/dirtree"
"Bug Tracker" = "https://github.com/juso40/dirtree/issues"

[project.scripts]
dirtree = "dirtree:main"